# Pixel-Generator-Project

./: README.md
cpp_project-sabrina-korsch/: CMakeLists.txt  IDENTIFICATION.txt  README.txt  demo  pixel_art_gen.cpp  presentation.url
cpp_project-sabrina-korsch/include/: color_reductions.hpp  dithering.hpp  pixel_matrix.hpp
cpp_project-sabrina-korsch/lib/: color_reductions.cpp  dithering.cpp  pixel_matrix.cpp
cpp_project_build/: pixel_art_gen
